added preview screen

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,3 +1,5 @@
+@import './scss/tablePreview';
+
 .slider{
   box-shadow: rgba(33, 48, 79, 0.08) 2px 2px 4px 0px;
   border-right: 1px solid rgb(222, 227, 244);
