changed it to scss
Signed-off-by: parthar555 <partharoysoft@gmail.com>

--- a/src/scss/tablePreview.scss
+++ b/src/scss/tablePreview.scss
@@ -1,7 +1,7 @@
 .p-datatable-wrapper {
     .p-datatable-table {
         .p-datatable-thead{
-            background: #D3D3D3;
+            background: #F9FAFB;
             color: #000;
             height: 5rem;
             tr {
